--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,13 +3,17 @@
   и их переопределение под различные устройства
 */
 
+
 :root {
   --main-fonts: "IBM Plex mono";
-  --accent-color: #ff8dcb;
-  --text-color: #353430;
   --bg-image: url(../images/cover-image-light.png);
+  --padding-base: 20px;
+  --bg: #fff1f7;
+  --bg-accent:#ff8dcb;;
+  --border-btn: rgba(50 49 45 / 0.4);
+  --shadow-title: #ff0070;
   --h1-h2-title: #ffc2e6;
   --p-color: #353430;
-  --border-opacity: 53, 52, 48;
-  --shadow-title: #ff0070;
+  --h3-color: #353430;
+  --h4-contrast: #353430;
 }
