--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,13 +3,12 @@
   и их переопределение под различные устройства
 */
 
-
 :root {
   --main-fonts: "IBM Plex mono";
   --bg-image: url(../images/cover-image-light.png);
   --padding-base: 20px;
   --bg: #fff1f7;
-  --bg-accent:#ff8dcb;;
+  --bg-accent: #ff8dcb;
   --border-btn: rgba(50 49 45 / 0.4);
   --shadow-title: #ff0070;
   --h1-h2-title: #ffc2e6;
