--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,8 @@
 /* день */
 .page {
   max-width: 1024px;
-  font-family: var(--main-fonts), sans-serif;
+  color: var(--p-color);
+  font-family: var(--main-fonts);
   font-weight: normal;
   font-size: 18px;
   line-height: 1.3em;
@@ -12,7 +13,6 @@
   background-position: top center;
   background-size: cover;
   background-attachment: fixed;
-  color: var(--p-color);
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
 
@@ -38,8 +38,8 @@
   position: absolute;
   display: none;
   align-items: center;
-  text-transform: uppercase;
   gap: 10px;
+  text-transform: uppercase;
   inset-inline-end: 33px;
   inset-block-start: 22px;
 }
@@ -58,13 +58,13 @@
   position: relative;
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
-  block-size: min(100vh, 1024px);
   padding: var(--padding-base);
   color: var(--h3-color);
+  block-size: min(100vh, 1024px);
 }
 
 .decorated-zone::before {
-  content: '';
+  content: "";
   position: absolute;
   border-inline-end: 1px solid currentColor;
   border-block-start: 1px solid currentColor;
@@ -75,7 +75,7 @@
 }
 
 .decorated-zone::after {
-  content: '';
+  content: "";
   position: absolute;
   border-inline-start: 1px solid currentColor;
   border-block-end: 1px solid currentColor;
@@ -99,9 +99,9 @@
   border: 1px solid transparent;
   padding-inline: 13px;
   padding-block: 1.5px;
-  text-transform: lowercase;
   font-family: var(--main-fonts, sans-serif);
   line-height: 1em;
+  text-transform: lowercase;
   background-color: transparent;
   cursor: pointer;
 }
@@ -125,27 +125,27 @@
 }
 
 .header__title {
+  position: relative;
+  right: 20px;
+  align-self: center;
   color: var(--h1-h2-title);
   font-weight: bold;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   line-height: 82.5%;
   text-shadow: 4px 4px 0 var(--shadow-title);
-  align-self: center;
-  position: relative;
-  right: 20px;
 }
 
 .header__description {
   justify-self: end;
+  align-self: center;
   width: 50%;
   height: fit-content;
-  align-self:center;
 }
 
 .title-decor {
+  color: var(--h4-contrast);
   font-weight: bold;
   background-color: var(--bg-accent);
-  color:var(--h4-contrast);
 }
 
 .content {
@@ -175,9 +175,9 @@
   grid-row: -1/1;
 }
 .content__block-title {
+  font-size: inherit;
   margin-block-end: 10px;
 }
-
 
 .content__central {
   display: grid;
@@ -238,20 +238,20 @@
   object-fit: cover;
 }
 
-.gallery__img-1 {
+.gallery__img:first-child {
   grid-column: 1 / 3;
 }
 
-.gallery__img-2 {
+.gallery__img:nth-child(2) {
   grid-column: 3 / -1;
   grid-row: 1 / 3;
 }
 
-.gallery__img-3 {
+.gallery__img:nth-child(3) {
   grid-row: 2 / -1;
 }
 
-.gallery__img-5 {
+.gallery__img:nth-child(5) {
   grid-column: 2 / -1;
 }
 
@@ -265,8 +265,8 @@
   justify-content: center;
   align-items: center;
   height: min(100vh, 1024px);
-  color: var(--h3-color);
   padding: var(--padding-base);
+  color: var(--h3-color);
 }
 
 .footer__title {
@@ -292,11 +292,13 @@
     align-self: center;
   }
 
+  .header__theme-menu-button {
+    padding-block: 3px;
+  }
 
   .content__top {
     grid-template-columns: 1fr 2fr;
   }
-
 
   .content__central {
     display: flex;
@@ -314,37 +316,51 @@
   .gallery__box {
     grid-template-rows: 192px 230px 318px;
   }
+}
 
-  }
-
-
-@media (width <= 375px) {
+@media (width <= 500px) {
   :root {
     --padding-base: 10px;
-  }
-  
-  .content {
-    margin-block-start: 40px;
   }
 
   .header__title {
     right: 0px;
   }
 
+  .header__description {
+    width: 100%;
+  }
+  .content__top,
+  .content__bottom {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (width <= 375px) {
+  .header__decor {
+    inset-inline-end: 20px;
+    inset-block-start: 11px;
+  }
+
+  .content {
+    margin-block-start: 40px;
+  }
 
   .header__title,
   .footer__title {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
 
+
   .header__theme-menu-list {
     flex-direction: column;
     align-items: end;
+    margin-block-end: 3px;
   }
 
   .header__description {
     width: 100%;
-
   }
 
   .content__central-title {
@@ -353,7 +369,6 @@
 
   .content__top,
   .content__bottom {
-    grid-template-columns: 1fr;
     margin-block-end: 50px;
   }
 
@@ -365,7 +380,6 @@
   .content__bottom .content__block {
     grid-column: auto;
   }
-
 
   .gallery {
     margin-block-end: 40px;
@@ -380,5 +394,4 @@
     flex-direction: column;
     gap: 10px;
   }
-
 }
